fix: adjust footer style to make the text readable on all themes

--- a/apps/tailwind-components/assets/css/main.css
+++ b/apps/tailwind-components/assets/css/main.css
@@ -84,8 +84,8 @@
     --background-color-pagination: var(--color-blue-800);
     --background-color-pagination-hover: var(--color-blue-900);
     --background-color-pagination-input: var(--color-white);
-    --background-color-footer: var(--color-blue-800);
-    --background-color-modal-footer: var(--color-blue-800);
+    --background-color-footer: var(--color-white);
+    --background-color-modal-footer: var(--color-white);
     --background-color-tab: var(--color-blue-50);
     --background-color-tab-hover: var(--color-blue-500);
     --background-color-tab-active: var(--color-blue-500);
@@ -147,7 +147,7 @@
     --text-color-pagination-input: var(--text-color-title);
     --text-color-pagination-hover: var(--color-white);
     --text-color-pagination-button: var(--color-white);
-    --text-color-footer-link: var(--color-yellow-500);
+    --text-color-link: var(--color-blue-500);
     --text-color-listbox: var(--color-black);
     --text-color-listbox-hover: var(--color-black);
     --text-color-listbox-selected: var(--color-blue-50);
